# Render

./: .gitignore  CMakeLists.txt  CMakelists.txt  README.md  imgui.ini
include/: Camera.h  InputHandler.h  Light.h  Material.h  Mesh.h  Model.h  Renderer.h  Scene.h  SceneNode.h  Shader.h  Texture.h
res/shaders/: basic.frag  basic.vert  light.frag  light.vert
src/: Camera.cpp  InputHandler.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  Renderer.cpp  Scene.cpp  SceneNode.cpp  Shader.cpp  Texture.cpp  main.cpp
src/Base/: Buffer.h  File.h  GLM_Header.h  Hash.h  Image.cpp  Image.h  Logger.cpp  Logger.h  SIMD.h  StringUtils.h  Timer.h  UID.h  log_test.cpp
src/Context/: main.cpp
src/Render/: RenderStates.h  Renderer.h  Texture.h  Uniform.h  Vertex.h
src/Render/Base/: Framebuffer.h  PipelineStates.h  RenderStates.h  Renderer.h  ShaderProgram.h  Texture.h  Uniform.h  Vertex.h
src/Render/OpenGL/: GLSLUtils.cpp  GLSLUtils.h  OpenGLUtils.h
src/Render/Soft/: BlendSoft.h  DepthSoft.h  FrameBufferSoft.h  RendererInternal.h  RendererSoft.cpp  RendererSoft.h  SamplerSoft.h  ShaderProgramSoft.h  ShaderSoft.h  TextureSoft.h  UniformSoft.h  VertexSoft.h
src/Utils/: AlignedMemory.h  Geometry.cpp  Geometry.h  Logger.cpp  Platform.h  ThreadPool.h
src/Viewer/: Camera.cpp  Camera.h  Config.h  ConfigPanel.cpp  ConfigPanel.h  Cube.h  Environment.cpp  Environment.h  Material.cpp  Material.h  Model.h  ModelLoader.cpp  ModelLoader.h  OrbitController.cpp  OrbitController.h  QuadFilter.cpp  QuadFilter.h  RenderDebug.cpp  RenderDebug.h  Viewer.cpp  Viewer.h  ViewerManager.h  ViewerSoftware.h  main.cpp
src/Viewer/Shader/Software/: BasicSoft.h  BlinnPhongSoft.h  FxaaSoft.h  IBLIrradianceSoft.h  IBLPrefilterSoft.h  PbrSoft.h  SkyboxSoft.h
tests/: AlignedMemoryTest.cpp  BufferTest.cpp  FileTest.cpp  HashTest.cpp  SamplerSoftTest.cpp  TextureSoftTest.cpp  ThreadPoolTest.cpp  TimerTest.cpp  VAOSoftTest.cpp
third/Glad/: CMakelists.txt
third/Glad/include/glad/: glad.h
third/Glad/src/: glad.c
third/imgui/: CMakelists.txt
